Datepicker Jump Fix

--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -628,6 +628,7 @@ body{
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);
     position: fixed;
     z-index: 1;
+    top:0px !important;
     &.home-page{
         box-shadow:none;
         background:#fafafa;
@@ -926,6 +927,7 @@ body{
     position: fixed;
     height: 100vh;
     z-index: 1;
+    top:0px !important;
     .sidebar-header{
         background:transparent;
         width: 100%;
@@ -1531,6 +1533,7 @@ $colorVariable: var(--value);
         } 
     }
 }
+
 .order-product-details {
     cursor: default;
 }
